# gws_mcp

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt  setup.py
.github/workflows/: ci.yml
backend/: auth.py  db.py  main.py  models.py  requirements.txt
backend/api/: calendar.py  gmail.py
mcp-server/: README.md  pyproject.toml
mcp-server/connectors_mcp/: client.py  server.py
tests/: test_db.py
